--- a/l4d2Simple/l4d2Simple.vcxproj.filters
+++ b/l4d2Simple/l4d2Simple.vcxproj.filters
@@ -22,6 +22,12 @@
     <Filter Include="头文件\detours">
       <UniqueIdentifier>{f74d69ae-99e7-4eb4-b2f6-f5f14a644d39}</UniqueIdentifier>
     </Filter>
+    <Filter Include="头文件\imgui">
+      <UniqueIdentifier>{3287d3bb-d818-437e-9dbb-41178f9efb30}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="头文件\imgui\dx9">
+      <UniqueIdentifier>{a38b1bfd-8e6c-40a8-bb91-3840b1bdea36}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="libraries\interfaces.h">
@@ -174,6 +180,27 @@
     <ClInclude Include="structs\clientstate.h">
       <Filter>头文件\structs</Filter>
     </ClInclude>
+    <ClInclude Include="..\imgui\imconfig.h">
+      <Filter>头文件\imgui</Filter>
+    </ClInclude>
+    <ClInclude Include="..\imgui\imgui.h">
+      <Filter>头文件\imgui</Filter>
+    </ClInclude>
+    <ClInclude Include="..\imgui\imgui_internal.h">
+      <Filter>头文件\imgui</Filter>
+    </ClInclude>
+    <ClInclude Include="..\imgui\stb_rect_pack.h">
+      <Filter>头文件\imgui</Filter>
+    </ClInclude>
+    <ClInclude Include="..\imgui\stb_textedit.h">
+      <Filter>头文件\imgui</Filter>
+    </ClInclude>
+    <ClInclude Include="..\imgui\stb_truetype.h">
+      <Filter>头文件\imgui</Filter>
+    </ClInclude>
+    <ClInclude Include="..\imgui\dx9\imgui_impl_dx9.h">
+      <Filter>头文件\imgui\dx9</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="structs\checksum_md5.cpp">
@@ -187,6 +214,18 @@
     </ClCompile>
     <ClCompile Include="d3dfont\D3DFont.cpp">
       <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="..\imgui\imgui.cpp">
+      <Filter>头文件\imgui</Filter>
+    </ClCompile>
+    <ClCompile Include="..\imgui\imgui_demo.cpp">
+      <Filter>头文件\imgui</Filter>
+    </ClCompile>
+    <ClCompile Include="..\imgui\imgui_draw.cpp">
+      <Filter>头文件\imgui</Filter>
+    </ClCompile>
+    <ClCompile Include="..\imgui\dx9\imgui_impl_dx9.cpp">
+      <Filter>头文件\imgui\dx9</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
