--- a/l4d2Simple/l4d2Simple.vcxproj
+++ b/l4d2Simple/l4d2Simple.vcxproj
@@ -72,16 +72,16 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>$(VC_IncludePath);$(WindowsSDK_IncludePath);E:\Program Files\dxsdk\Include;F:\VSProject\l4d2Simple\imgui;$(IncludePath)</IncludePath>
-    <LibraryPath>E:\Program Files\dxsdk\Lib\x86;$(LibraryPath)</LibraryPath>
+    <IncludePath>$(VC_IncludePath);$(WindowsSDK_IncludePath);G:\Program Files\dxsdk\Include;H:\\VSProject\l4d2Simple\imgui;$(IncludePath)</IncludePath>
+    <LibraryPath>G:\Program Files\dxsdk\Lib\x86;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>$(VC_IncludePath);$(WindowsSDK_IncludePath);E:\Program Files\dxsdk\Include;F:\VSProject\l4d2Simple\imgui;$(IncludePath)</IncludePath>
-    <LibraryPath>E:\Program Files\dxsdk\Lib\x86;$(LibraryPath)</LibraryPath>
+    <IncludePath>$(VC_IncludePath);$(WindowsSDK_IncludePath);G:\\Program Files\dxsdk\Include;H:\VSProject\l4d2Simple\imgui;$(IncludePath)</IncludePath>
+    <LibraryPath>G:\Program Files\dxsdk\Lib\x86;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
