--- a/.gitignore
+++ b/.gitignore
@@ -262,3 +262,34 @@ __pycache__/
 /l4d2Simple/features.h
 /l4d2Simple/features.cpp
 /l4d2Simple/libraries/utl_keyvalues.h
+/squirrel3/squirrel.dsw
+/squirrel3/README
+/squirrel3/Makefile
+/squirrel3/HISTORY
+/squirrel3/COPYRIGHT
+/squirrel3/COMPILE
+/squirrel3/CMakeLists.txt
+/squirrel3/squirrel/Makefile
+/squirrel3/squirrel/CMakeLists.txt
+/squirrel3/squirrel/squirrel.dsp
+/squirrel3/squirrel/squirrel.vcxproj.filters
+/squirrel3/sqstdlib/sqstdstream.h
+/squirrel3/sqstdlib/sqstdlib.vcxproj.filters
+/squirrel3/sqstdlib/sqstdlib.vcxproj
+/squirrel3/sqstdlib/sqstdlib.dsp
+/squirrel3/sqstdlib/Makefile
+/squirrel3/sqstdlib/CMakeLists.txt
+/squirrel3/sq
+/squirrel3/samples
+/squirrel3/project/squirrel/squirrel.dir
+/squirrel3/project/squirrel/CMakeFiles
+/squirrel3/project/sqstdlib/sqstdlib.dir
+/squirrel3/project/sqstdlib/CMakeFiles
+/squirrel3/project/sq
+/squirrel3/project/sqstdlib/cmake_install.cmake
+/squirrel3/project/squirrel/cmake_install.cmake
+/squirrel3/project/CMakeFiles
+/squirrel3/doc
+/squirrel3/etc
+/squall/samples
+/squirrel3/project
