--- a/l4d2Simple/l4d2Simple.vcxproj
+++ b/l4d2Simple/l4d2Simple.vcxproj
@@ -37,7 +37,7 @@
     <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v141</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
-    <CharacterSet>Unicode</CharacterSet>
+    <CharacterSet>NotSet</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
     <ConfigurationType>DynamicLibrary</ConfigurationType>
@@ -80,8 +80,8 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>$(VC_IncludePath);$(WindowsSDK_IncludePath);G:\\Program Files\dxsdk\Include;H:\VSProject\l4d2Simple\imgui;$(IncludePath)</IncludePath>
-    <LibraryPath>G:\Program Files\dxsdk\Lib\x86;$(LibraryPath)</LibraryPath>
+    <IncludePath>$(VC_IncludePath);$(WindowsSDK_IncludePath);G:\\Program Files\dxsdk\Include;../imgui;../squall;../squirrel3/include;$(IncludePath)</IncludePath>
+    <LibraryPath>G:\Program Files\dxsdk\Lib\x86;../squirrel3/project/squirrel/Release;../squirrel3/project/sqstdlib/Release;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
@@ -155,12 +155,40 @@
     <ClInclude Include="..\imgui\stb_rect_pack.h" />
     <ClInclude Include="..\imgui\stb_textedit.h" />
     <ClInclude Include="..\imgui\stb_truetype.h" />
+    <ClInclude Include="..\squall\squall_any.hpp" />
+    <ClInclude Include="..\squall\squall_call.hpp" />
+    <ClInclude Include="..\squall\squall_closure.hpp" />
+    <ClInclude Include="..\squall\squall_closure_decl.hpp" />
+    <ClInclude Include="..\squall\squall_coroutine.hpp" />
+    <ClInclude Include="..\squall\squall_defun.hpp" />
+    <ClInclude Include="..\squall\squall_defvar.hpp" />
+    <ClInclude Include="..\squall\squall_exception.hpp" />
+    <ClInclude Include="..\squall\squall_klass.hpp" />
+    <ClInclude Include="..\squall\squall_klass_table.hpp" />
+    <ClInclude Include="..\squall\squall_make_function.hpp" />
+    <ClInclude Include="..\squall\squall_partial_apply.hpp" />
+    <ClInclude Include="..\squall\squall_stack_operation.hpp" />
+    <ClInclude Include="..\squall\squall_table.hpp" />
+    <ClInclude Include="..\squall\squall_table_base.hpp" />
+    <ClInclude Include="..\squall\squall_utility.hpp" />
+    <ClInclude Include="..\squall\squall_vm.hpp" />
+    <ClInclude Include="..\squall\squall_vmstd.hpp" />
+    <ClInclude Include="..\squirrel3\include\sqconfig.h" />
+    <ClInclude Include="..\squirrel3\include\sqstdaux.h" />
+    <ClInclude Include="..\squirrel3\include\sqstdblob.h" />
+    <ClInclude Include="..\squirrel3\include\sqstdio.h" />
+    <ClInclude Include="..\squirrel3\include\sqstdmath.h" />
+    <ClInclude Include="..\squirrel3\include\sqstdstring.h" />
+    <ClInclude Include="..\squirrel3\include\sqstdsystem.h" />
+    <ClInclude Include="..\squirrel3\include\squirrel.h" />
     <ClInclude Include="..\stackwalker\StackWalker.h" />
+    <ClInclude Include="binding.h" />
     <ClInclude Include="d3dfont\D3DFont.h" />
     <ClInclude Include="d3dukmdt.h" />
     <ClInclude Include="d3dumddi.h" />
     <ClInclude Include="definitions.h" />
     <ClInclude Include="detours\detourxs.h" />
+    <ClInclude Include="drawmanager.h" />
     <ClInclude Include="indexes.h" />
     <ClInclude Include="libraries\buffer.h" />
     <ClInclude Include="libraries\interfaces.h" />
@@ -180,6 +208,12 @@
     <ClInclude Include="libraries\xorstr.h" />
     <ClInclude Include="main.h" />
     <ClInclude Include="ntdll.h" />
+    <ClInclude Include="peb.h" />
+    <ClInclude Include="sqbinding\debugoverlay.h" />
+    <ClInclude Include="sqbinding\draw.h" />
+    <ClInclude Include="sqbinding\qangle.h" />
+    <ClInclude Include="sqbinding\surface.h" />
+    <ClInclude Include="sqbinding\vector.h" />
     <ClInclude Include="structs\angle.h" />
     <ClInclude Include="structs\backtrack.h" />
     <ClInclude Include="structs\baseentity.h" />
@@ -217,9 +251,17 @@
     <ClCompile Include="..\imgui\imgui_demo.cpp" />
     <ClCompile Include="..\imgui\imgui_draw.cpp" />
     <ClCompile Include="..\stackwalker\StackWalker.cpp" />
+    <ClCompile Include="binding.cpp" />
     <ClCompile Include="d3dfont\D3DFont.cpp" />
     <ClCompile Include="detours\detourxs.cpp" />
+    <ClCompile Include="drawmanager.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="peb.cpp" />
+    <ClCompile Include="sqbinding\debugoverlay.cpp" />
+    <ClCompile Include="sqbinding\draw.cpp" />
+    <ClCompile Include="sqbinding\qangle.cpp" />
+    <ClCompile Include="sqbinding\surface.cpp" />
+    <ClCompile Include="sqbinding\vector.cpp" />
     <ClCompile Include="structs\checksum_md5.cpp" />
   </ItemGroup>
   <ItemGroup>
